<?xml version="1.0"?>
<package>
    <name>allegro_hand_description</name>
    <version>0.0.1</version>
    <description>Allegro hand models.</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <author email="felix.duvallet@epfl.ch">Felix Duvallet</author>
    <author email="marco.costanzo@unicampania.it">Marco Costanzo</author>
    <maintainer email="marco.costanzo@unicampania.it">Marco Costanzo</maintainer>


    <buildtool_depend>catkin</buildtool_depend>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>GPLv3</license>
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
